# clap-examples

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: emscripten.yml  linux.yml  macos.yml  pre-commit.yml  windows.yml
.github/workflows_disabled/: emscripten.yml
cmake/: ta_conan.cmake
example/app/: main.cpp  opengl_shader.cpp
example/app-cairo/: CMakeLists.txt  main.cpp
example/app-emscripten/: CMakeLists.txt  main.cpp
example/app-glfw-imgui/: CMakeLists.txt  file_manager.cpp  file_manager.h  main.cpp  opengl_shader.cpp  opengl_shader.h
example/app-sdl/: CMakeLists.txt  main.cpp
example/plugin-imgui/: CMakeLists.txt
example/plugin-imgui/src/: audio_plugin.cpp  audio_plugin.hpp  gain_plugin.cpp  gain_plugin.hpp  gui.cpp  imgui_base.cpp  imgui_linux.cpp  imgui_mac.mm  imgui_win32.cpp  main_clap.cpp
example/plugin-minimal/: CMakeLists.txt  main.cpp
profiles/: emscripten.profile
resources/mac/: symbols.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  file_manager.cpp  file_manager.h  main.cpp  opengl_shader.cpp  opengl_shader.h
src/app-cairo/: CMakeLists.txt
src/app-cairo/src/: canvas.hpp  color.hpp  main.cpp  window.cpp  window.hpp
src/app-cairo/src/geometry/: rectangle.hpp
src/app-cairo/src/graphics/: canvas.cpp  canvas.hpp  color_rgba.hpp
src/app-cairo/src/input/: click_action.hpp  key_click_event.hpp  mouse_click_event.hpp  mouse_cursor.hpp
src/app-cairo/src/ui/: window.hpp
src/app-emscripten/: CMakeLists.txt  main.cpp
src/mc/: ui.cpp  ui.hpp
src/mc/ui/geometry/: point_2d.hpp  rectangle.hpp
src/mc/ui/graphics/: canvas.cpp  canvas.hpp
src/mc/ui/input/: key_click_event.hpp  key_modifier.hpp  mouse_button.hpp  mouse_click_event.hpp
src/mc/ui/window/: window.cpp  window.hpp
src/plugin/: main.cpp
src/plugin-imgui/: CMakeLists.txt  gain.cpp  gui.cpp  imgui_base.cpp  imgui_linux.cpp  imgui_mac.mm  imgui_win32.cpp  main.cpp  main.h  plugin.cpp
src/plugin-imgui/src/: audio_plugin.cpp  audio_plugin.hpp  gain.cpp  gain.hpp  gain_plugin.cpp  gain_plugin.hpp  gui.cpp  imgui_base.cpp  imgui_linux.cpp  imgui_mac.mm  imgui_win32.cpp  main_clap.cpp
src/plugin-minimal/: CMakeLists.txt  main.cpp
src/ta/: ui.cpp  ui.hpp
src/ta/ui/geometry/: point_2d.hpp  rectangle.hpp
src/ta/ui/graphics/: canvas.cpp  canvas.hpp  color_rgba.hpp
src/ta/ui/input/: click_action.hpp  key_click_event.hpp  key_modifier.hpp  mouse_button.hpp  mouse_click_event.hpp  mouse_cursor.hpp
src/ta/ui/window/: window.cpp  window.hpp
